[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oneclaw"
version = "0.3.3"
description = "Official Python SDK for the 1Claw secrets management platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "1Claw", email = "ops@1claw.xyz" },
]
keywords = ["secrets", "vault", "ai", "agents", "crypto", "signing", "bindings", "execution-intents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://1claw.xyz"
Documentation = "https://docs.1claw.xyz"
Repository = "https://github.com/1clawAI/1claw-python-sdk"
Issues = "https://github.com/1clawAI/1claw-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oneclaw"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
